# SimpleRailwaySignals

./: .commitlintrc.yml  .release-please-config.json  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  conanfile.txt
.github/workflows/: build-and-test.yml  build-test-base.yml  build.yml  debug-build.yml  release-please.yml  test-report.yml
docs/: CLASS_REFERENCE.md  DESIGN.md  REQUIREMENTS.MD  SAFETY.md
include/: RailwaySignal.hpp  RailwayTypes.hpp  SignalCommand.hpp  SignalDemo.hpp  SignalState.hpp
includes/: RailwaySignal.hpp  SignalCommand.hpp  SignalState.hpp
sources/: RailwaySignal.cpp  SignalState.cpp  main.cpp
src/: RailwaySignal.cpp  SignalCommand.cpp  SignalDemo.cpp  SignalState.cpp  main.cpp
tests/: railway_signal_test.cpp
